Devel::Cover history

{{$NEXT}}
 - Quieten some deparse warnings.
 - Fix errors in write_csv (Jim Keenan) (github 64).
 - Fix error in -inc/+inc docs and pod formatting (Olaf Alders) (github 65).

Release 1.04 - 1 June 2013
 - Fix return code from cover (Kan Fushihara) (guthub 61).
 - Fix pod coverage for multiple packages in a file. (rt 34888).
 - Speed improvements.

Release 1.03 - 20 May 2013
 - Fixes for correct operation with 5.17.11, 5.18.0 and 5.19.0.

Release 1.02 - 28 April 2013
 - Make -silent even quieter (Sergiy Borodych) (guthub 49).
 - mod_perl2 on Debian sets $^X to apache2 (Lasse Makholm) (github 47).
 - Add csv file for use with metacpan (Dinis Rebolo) (github 56).
 - cover -test exists with the staus of the underlying test run (Kan Fushihara)
   (github 57, 58).
 - Quieten a warning (Jim Keenan) (github 59).

Release 1.01 - 30 March 2013
 - Test against 5.14.4, 5.16.3, 5.17.8, 5.17.9 and 5.17.10.
 - Ignore PERL5OPT during tests.  And other make targets. (rt 43833).
 - &&=, ||= and //= operators now require RHS to be true and false.
 - Fix some "uninitialized value" warnings.

Release 1.00 - 10 February 2013
 - Fix segv in constant folding of xor ops (github 40).
 - Fix various problems running Devel::Cover under tainting (github 41).
 - Add JavaScript to filter results in html_basic (David Cantrell) (github 42).
   Use -norestrict option to keep previous behaviour.
 - Document ability to mark code as uncoverable (github 45).

Release 0.99 - 31 December 2012
 - Improve documentation (Olaf Alders) (github 34).
 - Thank Bytemark for the cpancover server.
 - Test against 5.17.7.
 - Provide coverage for subs removed from the symbol table (rt 13207).

Release 0.98 - 25 November 2012
 - Fix links on html_basic report.
 - Fix setting Inc under taint mode (Guillaume Aubert) (guthub 26, 33).
 - Test against 5.17.6.
 - Improve warnings from Devel::Cover and reduce duplicates.
 - Make cover -test -nodelete work.
 - Run cpancover with 5.16.2.